# waybar-cy-live-weather

./: Cargo.nix  Cargo.toml  flake.nix
src/: args.rs  main.rs  meteorology.rs  waybar_json.rs
